# serializer version: 1
# name: test_acquire
  dict({
    'acquired': True,
    'archived': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'foo',
    'key': 'key',
    'ping': None,
    'progress': 3,
    'stage': None,
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_acquire.1
  dict({
    '_id': 'foo',
    'acquired': True,
    'archived': False,
    'args': dict({
    }),
    'key': 'hashed',
    'rights': dict({
    }),
    'state': 'preparing',
    'status': list([
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_archive
  dict({
    'acquired': False,
    'archived': True,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'foo',
    'ping': None,
    'progress': 0,
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_archive.1
  dict({
    '_id': 'foo',
    'acquired': False,
    'archived': True,
    'args': dict({
    }),
    'key': None,
    'rights': dict({
    }),
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_cancel
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'foo',
    'ping': None,
    'progress': 0,
    'stage': 'foo',
    'state': <JobState.RUNNING: 'running'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': 'foo',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_cancel.1
  dict({
    '_id': 'foo',
    'archived': False,
    'args': dict({
    }),
    'rights': dict({
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0.33,
        'stage': 'foo',
        'state': 'running',
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_create[None]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'fb085f7f',
    'ping': None,
    'progress': 0,
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[None].1
  dict({
    '_id': 'fb085f7f',
    'acquired': False,
    'archived': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[bar]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'bar',
    'ping': None,
    'progress': 0,
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[bar].1
  dict({
    '_id': 'bar',
    'acquired': False,
    'archived': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_timeout
  list([
    dict({
      '_id': 'ok_new',
      'state': 'running',
      'status': list([
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'waiting',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'running',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
      ]),
    }),
    dict({
      '_id': 'ok_ping',
      'state': 'running',
      'status': list([
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'waiting',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'running',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
      ]),
    }),
    dict({
      '_id': 'ok_state',
      'state': 'complete',
      'status': list([
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'waiting',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'running',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 1,
          'stage': 'Bar',
          'state': 'complete',
          'step_description': 'bar a foo',
          'step_name': 'bar',
          'timestamp': datetime,
        }),
      ]),
    }),
    dict({
      '_id': 'bad_old',
      'state': 'timeout',
      'status': list([
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'waiting',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'running',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'timeout',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
      ]),
    }),
    dict({
      '_id': 'bad_ping',
      'state': 'timeout',
      'status': list([
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'waiting',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'running',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
        dict({
          'error': None,
          'progress': 0.33,
          'stage': 'foo',
          'state': 'timeout',
          'step_description': 'Foo a bar',
          'step_name': 'foo',
          'timestamp': datetime,
        }),
      ]),
    }),
  ])
# ---
